--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div class="card-white" id="introduction">
 		<h1>Bonjour, Je suis Alexandre 🐉 </h1>
-		<img src="images/ProfileIm.jpg" class="img-circle" width="250px" alt="Alexandre KERNANET">
+		<img src="images/profile-picture.jpg" class="img-circle" width="250px" alt="Alexandre KERNANET">
 		<p> Je suis étudiant en Bachelor à Audencia, je travaille actuellement sur une mission commerciale pour l'entreprise Solikend. A côté, je suis manager livreur dans une pizzeria le Week-End. Je suis à la recherche de mon stage de troisième année, et suis determiné à parcourir le monde !
 			
 		</p>
