--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <div class="container">
 
 	<div class="card-white" id="introduction">
-		<h1>Bonjour, Je suis Alexandre 🐉 </h1>
+		<h1>Bonjour, Je suis Alexandre </h1>
 		<img src="images/profile-picture.jpg" class="img-circle" width="250px" alt="Alexandre KERNANET">
-		<p> Je suis étudiant en Bachelor à Audencia, je travaille actuellement sur une mission commerciale pour l'entreprise Solikend. A côté, je suis manager livreur dans une pizzeria le Week-End. Je suis à la recherche de mon stage de troisième année, et suis determiné à parcourir le monde !
+		<p> Je suis étudiant en Bachelor à Audencia Nantes, et actuellement stagiaire en tant qu'assistant chef de projet au sein du cabinet de gestion immobilière Tissinié. En parrallèle, je mène de petits projets qui me plongent dans la monde du travail et me permettent d'apprendre le fonctionnement du commerce. Je suis quelqu'un de très fiable, sociable, motivé, et surtout determiné à parcourir le monde ainsi qu'à me construire un avenir solide ! 
 			
 		</p>
 		<a href="https://www.linkedin.com/in/alexandre-kernanet/"    target="_blank" class="btn-blue">Découvrez mon profil LinkedIn</a>
@@ -32,7 +32,7 @@
 
 	<div class="card-white">
 		<h2>Sport 🏅</h2>
-			<p>J'adore le sport, c'est pour moi un élément essentiel. J'ai pratiqué plus d'une douzaine de sports dans ma vie et j'en ai tiré de grandes leçons, qui m'ont aidé même dans mes projets professionnels. Les deux sports que j'ai le plus pratiqués sont le Judo et le Tennis. Aujourd'hui je suis particulièrement fan des arts martiaux et des sports de combats. Je m'entraîne toujours régulierement ..!
+			<p>J'adore le sport, c'est pour moi un élément essentiel. J'ai pratiqué plus d'une douzaine de sports dans ma vie et j'en ai tiré de grandes leçons, qui m'ont aidé même dans mes projets professionnels. Les deux sports que j'ai le plus pratiqués sont le Judo et le Tennis. Aujourd'hui je suis particulièrement fan des arts martiaux et des sports de combats. Je m'entraîne toujours régulierement.
 			</p>
 
 
@@ -41,14 +41,14 @@
 
 	<div class="card-white">
 		<h2>Voyages 🏔</h2>
-			<p>J'aime voyager. J'ai eu la chance de voyager beaucoup étant petit et je souhaite continuer tout au long de ma vie même dans ma future carrière. Découvrir de nouveaux endroits, de nouvelles cultures et personnes ; qu'il y a t-il de plus attirant !!?
+			<p>J'aime voyager. J'ai eu la chance de voyager beaucoup étant petit et je souhaite continuer tout au long de ma vie, même dans ma future carrière. Découvrir de nouveaux endroits, de nouvelles cultures et personnes ; qu'il y a t-il de plus attirant ?
 			</p> 
 	</div>
 		
 	<div class="card-white">
-		<h2>Sorties 🍸</h2>
+		<h2>Vie sociale et aventure 🌍</h2>
 
-			<p>Ma vie ne serait pas la même sans mes amis et mes frères. Pour moi il est impensable de ne pas entretenir ma vie sociale même si je suis de nature solitaire. Sortir, voir mes amis et passer de superbes soirées pleines d'aventure c'est ce que j'aime le plus !
+			<p>Né fils unique, ma vie ne serait pas la même sans mes amis que je considère comme mes frères. Il est impensable pour moi de ne pas entretenir ma vie sociale même si je suis de nature solitaire. Sortir, voir mes amis et passer de superbes moments à plusieurs, c'est ce que j'aime le plus. Le summum étant bien sûr de voyager avec eux !
 			</p>
 	</div>
 
@@ -56,8 +56,6 @@
 		<h2>Retrouvez moi sur les réseaux!</h2>
 			<ul class="list-inline"> 
 				<li> <a href="https://www.facebook.com/profile.php?id=100004525757608"><i class="fab fa-facebook"></i></a>
-				</li>
-				<li> <a href="https://www.instagram.com/lakern__/?hl=fr"><i class="fab fa-instagram"></i></a>
 				</li>
 				<li> <a href="https://twitter.com/Kernazer"><i class="fab fa-twitter"></i></a>
 				</li>
